<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_24dp"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_create"
        android:icon="@drawable/ic_add_circle_24dp"
        android:title="@string/title_create" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_favourites"
        android:icon="@drawable/ic_favourite_24dp"
        android:title="@string/title_favourites" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_profile_24dp"
        android:title="@string/title_account" />

</menu>